Update Dyck numbers

--- a/posts/2025-12-14.md
+++ b/posts/2025-12-14.md
@@ -63,7 +63,8 @@ I should be able to for `csda` and `cspa`, but I'll likely need to reach out to 
 | CSPA      | postgresql|  0.3s | 29.8s |     76.7s |     15.0s |
 | Andersen  | medium    |  2.8s |  2.2s |      7.9s |      4.2s |
 | Andersen  | large     |  5.5s |  4.6s |     16.0s |      5.7s |
-| Dyck      | **ALL**   |       | **?** |         - |         - |
+| Dyck      | kernel    |  0.9s |  2.0s |      5.0s |      1.4s |
+| Dyck      | postgresql|  0.4s |  1.4s |      3.8s |      0.9s |
 | Galen     | galen     |  0.1s | 11.9s |     32.2s |      8.7s |
 | CRDT      | **ALL**   |       | **?** |         - |         - |
 | Polonius  | **ALL**   |       | **?** |         - |         - |
@@ -139,6 +140,10 @@ We use `str` literals, rather than `[u8]` literals, for the obvious data entry r
 At the same time, this means that you can't match all byte-slice literals that could come from input files.
 
 Not so surprising in retrospect, but I will need to ponder a way to resolve these.
+
+**Update**: Fixed, by changing from `&str` query literals to hex encodings of bytes.
+No one wants to type hex, of course, but it allows entry of all permitted byte patterns.
+We'll make it more pleasant in the future with a layer higher up.
 
 ### Is datatoad amazing?
 
