Experiment output validation

--- a/posts/2025-12-14.md
+++ b/posts/2025-12-14.md
@@ -38,44 +38,61 @@ As you'll see, the loading can often be dramatic, as it involves a bunch of CSV 
 I should also caveat that other than `galen` and the `tc`/`sc` computations, I haven't checked that the results are correct.
 I should be able to for `csda` and `cspa`, but I'll likely need to reach out to the FlowLog folks about validation for other problems.
 
-| problem   | dataset   | load  | exec  | best-4    | best-64   |
-| ---------:| ---------:| -----:| -----:| ---------:| ---------:|
-| cc        | **ALL**   |       | **X** |         - |         - |
-| reach     |livejournal|  4.8s |  1.1s |      6.7s |      5.1s |
-| reach     | orkut     |  7.8s |  1.3s |     11.0s |      8.6s |
-| reach     | arabic    | 46.2s | 11.7s |     60.4s |     35.0s |
-| reach     | twitter   |132.3s | 26.3s |    121.6s |     62.9s |
-| sssp      | **ALL**   |       | **X** |         - |         - |
-| transclos | G10k-0.001|  0.0s | 25.4s |     23.1s |      6.1s |
-| transclos | G20k-0.001|  0.0s |243.3s |    542.8s |     42.4s |
-| transclos | G40k-0.001|  0.1s |**TO** |    **TO** |    305.6s |
-| samegen   | G10k-0.001|  0.0s | 45.8s |    177.6s |     18.6s |
-| samegen   | G20k-0.001|  0.0s |411.1s |    **TO** |     90.7s |
-| samegen   | G40k-0.001|  0.1s |**TO** |    **TO** |    815.9s |
-| bipartite | roadca    |  0.4s |  1.4s |      3.5s |      1.3s |
-| bipartite | netflix   |  7.4s | 11.3s |     12.1s |      8.0s |
-| bipartite | mag       | 78.7s |**TO** |    167.9s |     76.7s |
-| CSDA      | httpd     |  0.7s |  1.6s |      4.1s |      1.3s |
-| CSDA      | linux     |  3.1s | 11.9s |     22.5s |      6.4s |
-| CSDA      | postgresql|  2.5s |  5.8s |     11.4s |      4.9s |
-| CSPA      | httpd     |  0.1s | 27.9s |     67.8s |     14.4s |
-| CSPA      | linux     |  0.6s |  8.3s |     20.9s |      4.8s |
-| CSPA      | postgresql|  0.3s | 29.8s |     76.7s |     15.0s |
-| Andersen  | medium    |  2.8s |  2.2s |      7.9s |      4.2s |
-| Andersen  | large     |  5.5s |  4.6s |     16.0s |      5.7s |
-| Dyck      | kernel    |  0.9s |  2.0s |      5.0s |      1.4s |
-| Dyck      | postgresql|  0.4s |  1.4s |      3.8s |      0.9s |
-| Galen     | galen     |  0.1s | 11.9s |     32.2s |      8.7s |
-| CRDT      | **ALL**   |       | **?** |         - |         - |
-| Polonius  | **ALL**   |       | **?** |         - |         - |
-| DDISASM   | **ALL**   |       | **?** |         - |         - |
-| DOOP      | **ALL**   |       | **?** |         - |         - |
+| problem   | dataset   | load  | exec  | best-4    | best-64   | output    |
+| ---------:| ---------:| -----:| -----:| ---------:| ---------:| ---------:|
+| cc        | **ALL**   |       | **X** |         - |         - |         - |
+| reach     |livejournal|  4.8s |  1.1s |      6.7s |      5.1s |   matches |
+| reach     | orkut     |  7.8s |  1.3s |     11.0s |      8.6s |   matches |
+| reach     | arabic    | 46.2s | 11.7s |     60.4s |     35.0s |   matches |
+| reach     | twitter   |132.3s | 26.3s |    121.6s |     62.9s |   **UNK** |
+| sssp      | **ALL**   |       | **X** |         - |         - |         - |
+| transclos | G10k-0.001|  0.0s | 25.4s |     23.1s |      6.1s |   matches |
+| transclos | G20k-0.001|  0.0s |243.3s |    542.8s |     42.4s |   **UNK** |
+| transclos | G40k-0.001|  0.1s |**TO** |    **TO** |    305.6s |   **UNK** |
+| samegen   | G10k-0.001|  0.0s | 45.8s |    177.6s |     18.6s |   matches |
+| samegen   | G20k-0.001|  0.0s |411.1s |    **TO** |     90.7s |   **UNK** |
+| samegen   | G40k-0.001|  0.1s |**TO** |    **TO** |    815.9s |   **UNK** |
+| bipartite | roadca    |  0.4s |  1.4s |      3.5s |      1.3s |   matches |
+| bipartite | netflix   |  7.4s | 11.3s |     12.1s |      8.0s |   matches |
+| bipartite | mag       | 78.7s |**TO** |    167.9s |     76.7s |   **UNK** |
+| CSDA      | httpd     |  0.7s |  1.6s |      4.1s |      1.3s |   matches |
+| CSDA      | linux     |  3.1s | 11.9s |     22.5s |      6.4s |   matches |
+| CSDA      | postgresql|  2.5s |  5.8s |     11.4s |      4.9s |   matches |
+| CSPA      | httpd     |  0.1s | 27.9s |     67.8s |     14.4s |   matches |
+| CSPA      | linux     |  0.6s |  8.3s |     20.9s |      4.8s |   matches |
+| CSPA      | postgresql|  0.3s | 29.8s |     76.7s |     15.0s |   matches |
+| Andersen  | medium    |  2.8s |  2.2s |      7.9s |      4.2s |   matches |
+| Andersen  | large     |  5.5s |  4.6s |     16.0s |      5.7s |   matches |
+| Dyck      | kernel    |  0.9s |  2.0s |      5.0s |      1.4s |   matches |
+| Dyck      | postgresql|  0.4s |  1.4s |      3.8s |      0.9s |   matches |
+| Galen     | galen     |  0.1s | 11.9s |     32.2s |      8.7s |   matches |
+| CRDT      | **ALL**   |       | **?** |         - |         - |         - |
+| Polonius  | clap-rs   |  0.1s | 65.7s |     70.5s |     41.4s |   matches |
+| DDISASM   | **ALL**   |       | **?** |         - |         - |         - |
+| DOOP      | **ALL**   |       | **?** |         - |         - |         - |
 
 With the caveat that we don't yet know if the results are correct, datatoad would be in the running for fastest 4-core system on many of these problems, but doesn't really menace the 64-core numbers.
 It is also a fair bit cheaper to run, and I suspect quite a lot simpler than many of the top systems.
 All pending the outputs actually being correct, of course.
 
 It also can't run many of the problems, which is worth saying out loud.
+
+### Update: 25-12-2025
+
+I got FlowLog up and running on my laptop, and was able to validate many of the datatoad outputs as matching the number of record in the FlowLog outputs.
+I also got Polonius running, and validated its output as well.
+Some of the numbers haven't been validated (**UNK**) because FlowLog doesn't complete on my laptop, due to heavy memory use and paging, but I'll reach out to the authors and give them my numbers to check.
+
+The remaining **?** entries use some weirder constructs that I'll need to add and test, like integer arithmetic, antijoins that don't bind all terms, and equality constraints to bind literals (i.e. `foo(bar), bar = 7` vs `foo(7)`).
+They all make sense, but aren't things that work well yet.
+
+There are other moments where light query transformations can improve times.
+The transitive closure query cuts its time almost in half if you swap from `tc, arc` to `arc, tc`, as it uses the native column order index, rather than needing a second one in the reverse direction.
+The bipartite query also has an alternate formulation that puts it on par with the four-worker numbers.
+
+Another observation is that four cores on my M2 laptop seem to be faster than four cores on an EPYC 7543; Polonius at four workers is reported at 215.4s on the EPYC, but takes only 149.1s on my laptop.
+So, some amount of the "speed-up" from datatoad is likely just that laptops are faster than servers, or something like that.
+And I haven't even started to use my GPU cores yet.
 
 ## Reflections
 
